user: cards api complete
