# src/routers/cards.router.ts
@@ -1,9 +1,14 @@
 import { Router } from "express";
-import { cardsAdminController } from "../controllers/cards.controller";
+import {
+	cardsAdminController,
+	cardsUserController,
+} from "../controllers/cards.controller";
+import { authorizeUser } from "../middlewares/auth.middleware";
 import { validateRequest } from "../utils/utils";
 import {
 	createCardSchema,
 	updateCardSchema,
+	updateUserCardsSchema,
 } from "../validators/card.validators";
 
 export const cardsAdminRouter = Router();
@@ -21,4 +26,19 @@ cardsAdminRouter.patch(
 	"/:id",
 	validateRequest(updateCardSchema),
 	cardsAdminController.updateCardHandler
+);
+
+export const cardsUserRouter = Router();
+
+cardsUserRouter.get(
+	"/",
+	authorizeUser,
+	cardsUserController.getUserCardsHandler
+);
+
+cardsUserRouter.put(
+	"/",
+	authorizeUser,
+	validateRequest(updateUserCardsSchema),
+	cardsUserController.putUserCardsHandler
 );
